src/tests/snapshots/eventql_parser__tests__parser__parse_from_events_with_top_identity_projection.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice()).unwrap()
---
attrs:
  pos:
    line: 1
    col: 1
sources:
  - binding:
      name: e
      pos:
        line: 1
        col: 6
    kind:
      Name: events
predicate: ~
group_by: ~
order_by:
  expr:
    attrs:
      pos:
        line: 2
        col: 10
    value:
      Access:
        target:
          attrs:
            pos:
              line: 2
              col: 10
          value:
            Id: e
        field: time
  order: Desc
limit:
  Top: 100
projection:
  attrs:
    pos:
      line: 4
      col: 14
  value:
    Id: e
distinct: false
