src/tests/snapshots/eventql_parser__tests__parser__parser_with_comment.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok:
  attrs:
    pos:
      line: 2
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 2
          col: 6
      kind:
        Name: events
  predicate:
    attrs:
      pos:
        line: 4
        col: 7
    value:
      Binary:
        lhs:
          attrs:
            pos:
              line: 4
              col: 7
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 4
                    col: 7
                value:
                  Id: e
              field: source
        operator: Neq
        rhs:
          attrs:
            pos:
              line: 4
              col: 19
          value:
            String: foobar
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 6
        col: 14
    value:
      Id: e
  distinct: false
  meta: ~
